whyred: Disable animateScreenLights
*sdm660 devices seem to have an issue with EGL.

libEGL: eglCreateWindowSurface:712 error 300b (EGL_BAD_NATIVE_WINDOW)
libEGL: eglDestroySurface:857 error 300d (EGL_BAD_SURFACE)
ColorFade: eglDestroySurface failed: error 12301
    java.lang.Throwable
        at com.android.server.display.ColorFade.logEglError(ColorFade.java:690)
        at com.android.server.display.ColorFade.destroyEglSurface(ColorFade.java:626)
        at com.android.server.display.ColorFade.dismissResources(ColorFade.java:333)
        at com.android.server.display.DisplayPowerState.dismissColorFadeResources(DisplayPowerState.java:205)
        at com.android.server.display.DisplayPowerController.animateScreenStateChange(DisplayPowerController.java:1358)
        at com.android.server.display.DisplayPowerController.updatePowerState(DisplayPowerController.java:783)
        at com.android.server.display.DisplayPowerController.access$500(DisplayPowerController.java:82)
        at com.android.server.display.DisplayPowerController$DisplayControllerHandler.handleMessage(DisplayPowerController.java:1767)
        at android.os.Handler.dispatchMessage(Handler.java:106)
        at android.os.Looper.loop(Looper.java:193)
        at android.os.HandlerThread.run(HandlerThread.java:65)
        at com.android.server.ServiceThread.run(ServiceThread.java:44)

Cherry-picked from https://github.com/xiaomi-sdm660/android_device_xiaomi_sdm660-common/commit/6901709b1db0addc6f4a0f8c59a4cfbf44e0ef4d
Signed-off-by: Andrew Hexen <SyberHexen@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -132,6 +132,9 @@
     <bool name="config_haveHigherAspectRatioScreen">true</bool>
     <item name="config_screenAspectRatio" format="float" type="dimen">2.0</item>
 
+     <!-- If this is true, the screen will fade off. -->
+    <bool name="config_animateScreenLights">false</bool>
+
     <bool name="config_defaultCABC">false</bool>
 
     <!-- Display mode remapping table.
